[gd_scene load_steps=13 format=3 uid="uid://b14wrx7gxddlk"]

[ext_resource type="Script" uid="uid://c0iuo0tl2gtp1" path="res://Assets/NPC/Story/story_teller.gd" id="1_cji1b"]
[ext_resource type="Texture2D" uid="uid://c65hsisbd5d64" path="res://Assets/NPC/Quest/questidle1.png" id="2_phwpu"]
[ext_resource type="Texture2D" uid="uid://dqgee0ye2jsba" path="res://Assets/NPC/Quest/questidle2.png" id="3_4cuk2"]
[ext_resource type="Texture2D" uid="uid://tnus7nmujgs5" path="res://Assets/NPC/Quest/questidle3.png" id="4_rg7xp"]
[ext_resource type="Texture2D" uid="uid://cjsksb5nehr4f" path="res://Player/Shadow (2).png" id="5_3csgl"]
[ext_resource type="FontFile" uid="uid://7frr1ucdtg6h" path="res://Assets/Fonts/Round9x13.ttf" id="6_fy2v5"]
[ext_resource type="Texture2D" uid="uid://ii8cx2uakvh" path="res://Assets/NPC/Trade/Exlamation.png" id="7_kibdt"]
[ext_resource type="Texture2D" uid="uid://ca8m2iij78igd" path="res://Assets/NPC/Trade/bubble (1).png" id="8_afban"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q26kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_phwpu")
}, {
"duration": 1.0,
"texture": ExtResource("3_4cuk2")
}, {
"duration": 1.0,
"texture": ExtResource("4_rg7xp")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0wsa"]
size = Vector2(354, 265)

[sub_resource type="CircleShape2D" id="CircleShape2D_vs377"]
radius = 1736.14

[sub_resource type="CircleShape2D" id="CircleShape2D_ofehv"]
radius = 629.003

[node name="StoryTeller" type="CharacterBody2D"]
script = ExtResource("1_cji1b")
npc_id = "Storyteller_1"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(39, -368)
sprite_frames = SubResource("SpriteFrames_q26kr")
animation = &"idle"
frame_progress = 0.236931
speed_scale = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29, -122.5)
shape = SubResource("RectangleShape2D_o0wsa")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
show_behind_parent = true
position = Vector2(112, 140)
scale = Vector2(3, 3)
texture = ExtResource("5_3csgl")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -424.0
offset_top = -942.0
offset_right = 634.0
offset_bottom = -737.0
theme_override_fonts/font = ExtResource("6_fy2v5")
theme_override_font_sizes/font_size = 112
text = "Press E to Talk
"

[node name="ExclamationMark" type="Sprite2D" parent="."]
z_index = 9
position = Vector2(42, -984)
scale = Vector2(1.4, 1.4)
texture = ExtResource("7_kibdt")

[node name="AlertArea" type="Area2D" parent="."]
position = Vector2(71, -319)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
position = Vector2(-54, 327)
shape = SubResource("CircleShape2D_vs377")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(41, -185)
shape = SubResource("CircleShape2D_ofehv")

[node name="ChatBubble" type="NinePatchRect" parent="."]
visible = false
z_index = 12
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 262.0
offset_top = -902.0
offset_right = 431.0
offset_bottom = -725.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_afban")
region_rect = Rect2(0, 0, 48, 48)

[node name="ChatLabel" type="RichTextLabel" parent="ChatBubble"]
z_index = 14
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.5
anchor_right = 0.503
anchor_bottom = 0.5
offset_left = -84.007
offset_top = -85.5
offset_right = 83.993
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_fy2v5")
theme_override_font_sizes/normal_font_size = 100
fit_content = true
autowrap_mode = 0
vertical_alignment = 1
justification_flags = 162
